Fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body {
-  margin: 1.75rem;
   background-color: white;
   overflow-x: hidden;
 }
 
 .background {
-  height: 110%;
-  width: 110%;
+  height: 70%;
+  width: 130%;
   position: absolute;
-  bottom: 15rem;
+  top: 1rem;
+  left: -2rem;
   background-color: #4379a6;
   transform: rotate(-3deg) translateY(-13rem);
   overflow: hidden;
@@ -20,9 +20,12 @@ header {
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  width: 70%;
   margin: 0 auto;
   text-align: center;
+}
+
+.about-wrapper {
+  width: 100%;
 }
 
 .name {
@@ -50,7 +53,7 @@ header {
   background-color: whitesmoke;
   box-shadow: 4px 4px 4px rgb(182, 182, 182);
   padding: 0.25rem 1.5rem;
-  min-width: 415px;
+  min-width: 300px;
 }
 
 .about-me-para > h2 {
@@ -179,33 +182,47 @@ header {
   .grid {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  .headshot {
+    float: none;
+  }
+
+  .about-me-para {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem auto;
+  }
 }
 
 @media (max-width: 415px) {
-  body {
-    margin: 0.1rem 0.75rem;
-  }
-
-  header {
-    flex-direction: column;
-  }
-
   .headshot {
     width: 200px;
     margin-top: 2rem;
+    float: none;
   }
 
-  .box {
-    height: 300px;
-    width: auto;
+  .name {
+    font-size: 1.75rem;
   }
-  
+
+  .about-me-para {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    font-size: 1.2rem;
+    width: 80%;
+  }
+
+  .about-me-para > h2 {
+    font-size: 1.2rem;
+  }
+
   .grid {
     grid-template-columns: 1fr;
   }
 
-  .contact {
-    display: flex;
-    flex-direction: column;
+  footer {
+    padding: 0;
+    margin: 0;
   }
 }
